fix description text losing line breaks in preview and after publishing

--- a/rataplan-frontend/src/styles.scss
+++ b/rataplan-frontend/src/styles.scss
@@ -209,6 +209,10 @@ mat-spinner.button-spinner, mat-progress-spinner.button-spinner {
   height: auto !important;
 }
 
+.linebreak-p-tag {
+  white-space: pre-line;
+}
+
 /* Main-Nav */
 
 .sidenav-container {
